--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-asgiref==3.8.1
-Django==5.0.4
-django-cors-headers==4.3.1
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+Django==3.2.25
+djangorestframework==3.15.1
+pytz==2024.1
 sqlparse==0.4.4
-typing_extensions==4.11.0
-tzdata==2024.1
+typing_extensions==4.7.1
