--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-asgiref==3.7.2
-backports.zoneinfo==0.2.1
-Django==3.2.25
-django-cors-headers==4.1.0
+asgiref==3.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==5.0.4
+django-allauth==0.63.2
+django-cors-headers==4.3.1
 djangorestframework==3.15.1
-drf-yasg==1.21.7
-inflection==0.5.1
-packaging==24.0
-Pillow==9.5.0
-pytz==2024.1
-PyYAML==6.0.1
+djangorestframework-simplejwt==5.3.1
+idna==3.7
+PyJWT==2.8.0
+requests==2.32.2
+rest-framework-simplejwt==0.0.2
 sqlparse==0.4.4
-typing_extensions==4.7.1
-uritemplate==4.1.1
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
