--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
+dj-rest-auth==6.0.0
 Django==5.0.4
 django-allauth==0.63.2
 django-cors-headers==4.3.1
