--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,38 @@
-asgiref==3.8.1
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+boto3==1.33.13
+botocore==1.33.13
 certifi==2024.2.2
+cffi==1.15.1
 charset-normalizer==3.3.2
-dj-rest-auth==6.0.0
-Django==5.0.4
+cryptography==42.0.7
+dj-rest-auth==5.1.0
+Django==3.2.25
 django-allauth==0.63.2
-django-cors-headers==4.3.1
+django-cors-headers==4.1.0
+django-rest-auth==0.9.5
+django-rest-authtoken==2.1.4
+django-storages==1.14.3
 djangorestframework==3.15.1
-djangorestframework-simplejwt==5.3.1
+djangorestframework-simplejwt==5.3.0
+drf-yasg==1.21.7
 idna==3.7
+inflection==0.5.1
+jmespath==1.0.1
+mysqlclient==2.2.4
+packaging==24.0
+Pillow==9.5.0
+pycparser==2.21
 PyJWT==2.8.0
-requests==2.32.2
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
 rest-framework-simplejwt==0.0.2
+s3transfer==0.8.2
+six==1.16.0
 sqlparse==0.4.4
-typing_extensions==4.11.0
-tzdata==2024.1
-urllib3==2.2.1
+typing_extensions==4.7.1
+uritemplate==4.1.1
+urllib3==1.26.6
